# ShopDesk-Router

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile
api/app/: config.py  db.py  main.py
api/app/routers/: attachments.py  debug_ml.py  ingest.py  tickets.py
common/clients/: gmail_client.py  shopify.py  stripe.py  zendesk.py
common/db/: dao.py
common/ingest/: email_parser.py  upload_service.py
common/ml/: __init__.py  asr.py  docqa.py  summarize.py  types.py  vqa.py  zeroshot.py
common/norm/: __init__.py  amounts.py  dates.py  merger.py  regexes.py
common/storage/: s3.py
infra/: alembic.ini
infra/alembic/: env.py
infra/alembic/versions/: 530298151aeb_.py  78c9531d3cbe_init_schema.py  9d1e7f9b1a2b_gmail_external_id_unique.py
infra/grafana/provisioning/datasources/: datasources.yml
infra/prometheus/: prometheus.yml
tests/: conftest.py  test_celery_tasks.py  test_gmail_poll.py  test_health.py  test_ml.py  test_norm.py  test_norm_amount.py  test_norm_dates.py  test_norm_merger.py  test_norm_regexes.py  test_s3.py
tests/data/: sample_multipart.eml
worker/: Dockerfile  celery_app.py
worker/jobs/: celery_tasks.py  doc_job.py  gmail_poll.py
