[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
